objects/BLN_Template__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN_Template</relationshipLabel>
        <relationshipName>BLN_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Reg_Main_Template__c</fullName>
        <label>BLN_Reg_Main_Template</label>
        <referenceTo>BLN_Reg_Main_Template__c</referenceTo>
        <relationshipLabel>BLN_Template</relationshipLabel>
        <relationshipName>BLN_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <label>HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN_Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Template_Name__c</columns>
        <columns>BLN_Events__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BLN_Events__c</field>
            <operation>equals</operation>
            <value>Default Event(Boothleads)</value>
        </filters>
        <filters>
            <field>BLN_Reg_Main_Template__c</field>
            <operation>equals</operation>
        </filters>
        <label>default widgets</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>BLN_Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN_Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>